--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -7,12 +7,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         >
 
         <RelativeLayout
             android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
@@ -35,14 +35,14 @@
                 android:alpha="0.7"
                 android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
-                android:textSize="28sp"
+                android:textSize="20sp"
                 android:layout_marginRight="5dp"
                 android:textColor="#ffffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="21dp"
+                android:layout_height="21dp"
                 android:background="@drawable/coins"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -53,7 +53,7 @@
 
         <RelativeLayout
             android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="5dp"
@@ -62,7 +62,7 @@
 
             <ImageButton
                 android:layout_width="45dp"
-                android:layout_height="25dp"
+                android:layout_height="20dp"
                 android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
@@ -74,7 +74,7 @@
 
         <RelativeLayout
             android:layout_width="85dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -85,8 +85,9 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -101,19 +102,19 @@
 
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="510dp" android:layout_marginTop="55dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="400dp" android:layout_marginTop="45dp">
         <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
                          zoom in to show more detail. All of the zooming and animation logic is in
                          the ZoomActivity class.
             -->
-            <RelativeLayout android:layout_width="490dp" android:layout_height="490dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="240dp" android:layout_height="240dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff384653" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="240dp" android:layout_height="240dp" android:layout_x="170dp" android:background="#ff384653" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="240dp" android:layout_height="240dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff384653" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="240dp" android:layout_height="240dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff384653" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="490dp" android:layout_height="490dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="4dp" android:background="#ff384653"/>
+            <RelativeLayout android:layout_width="370dp" android:layout_height="370dp" android:layout_centerHorizontal="true">
+                <ImageButton android:layout_width="180dp" android:layout_height="180dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff384653" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="180dp" android:layout_height="180dp" android:layout_x="170dp" android:background="#ff384653" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="180dp" android:layout_height="180dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff384653" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="180dp" android:layout_height="180dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff384653" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="370dp" android:layout_height="370dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="4dp" android:background="#ff384653"/>
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
@@ -123,7 +124,7 @@
         android:gravity="center"
         android:id="@+id/guessWordsLayout"
         android:orientation="vertical"
-        android:layout_marginTop="565dp">
+        android:layout_marginTop="440dp">
 
 
 
@@ -136,7 +137,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:gravity="center"
-        android:layout_marginTop="615dp"
+        android:layout_marginTop="485dp"
         >
 
         <Button
