--- a/app/src/main/res/layout-small/win.xml
+++ b/app/src/main/res/layout-small/win.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true">
 
             <TextView
