--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+
+    android:padding="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+
     >
 
     <RelativeLayout
+        android:padding="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
         android:alpha="0.7"></RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:padding="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true">
 
@@ -49,7 +56,7 @@
             android:id="@+id/guessWordTextView" />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/guessWordTextView"
             android:layout_marginLeft="10dp"
@@ -61,7 +68,7 @@
                 android:text="_"
                 android:textColor="#ffffffff"
                 android:textSize="30sp"
-
+                android:gravity="center_horizontal"
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
                 android:textStyle="italic" />
@@ -91,7 +98,8 @@
                     android:layout_alignBottom="@+id/textView5"
                     android:layout_toRightOf="@+id/textView5"
                     android:layout_toEndOf="@+id/textView5"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"/>
 
 
             </RelativeLayout>
