--- a/app/src/main/res/layout-xlarge/win.xml
+++ b/app/src/main/res/layout-xlarge/win.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    >
+    android:padding="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
+        android:padding="0dp"
         android:alpha="0.7"></RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:padding="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
@@ -59,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="_"
+                android:gravity="center_horizontal"
                 android:textColor="#ffffffff"
                 android:textSize="40sp"
                 android:id="@+id/textViewQuotation"
