--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
-        android:alpha="0.7"></RelativeLayout>
+        android:alpha="0.85"></RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -88,6 +89,7 @@
                     android:layout_height="70dp"
                     android:background="@drawable/coins"
                     android:id="@+id/imageView5"
+                    android:layout_marginLeft="20dp"
                     android:layout_alignBottom="@+id/textView5"
                     android:layout_toRightOf="@+id/textView5"
                     android:layout_toEndOf="@+id/textView5"
