--- a/app/src/main/res/layout-small/win.xml
+++ b/app/src/main/res/layout-small/win.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
-        android:alpha="0.85"></RelativeLayout>
+        android:alpha="0.85">
+
+        </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
