--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:background="#000000"
         android:alpha="0.85">
-        
+
         </RelativeLayout>
 
     <RelativeLayout
@@ -64,7 +64,7 @@
                 android:text="_"
                 android:textColor="#ffffffff"
                 android:textSize="30sp"
-
+                android:gravity="center_horizontal"
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
                 android:textStyle="italic" />
