--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="#00000000"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
-        android:alpha="0.85">
-
-        </RelativeLayout>
+        android:background="#a4000000"></RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -64,7 +61,7 @@
                 android:text="_"
                 android:textColor="#ffffffff"
                 android:textSize="30sp"
-                android:gravity="center_horizontal"
+
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
                 android:textStyle="italic" />
