--- a/app/src/main/res/layout-small/win.xml
+++ b/app/src/main/res/layout-small/win.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="#00000000">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
-        android:alpha="0.85">
-
-        </RelativeLayout>
+        android:background="#a4000000"></RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
