займаюсь баловством з мейн актівіті)

--- a/app/src/main/res/layout-small/about.xml
+++ b/app/src/main/res/layout-small/about.xml
@@ -7,6 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:background="@drawable/top_panel"
         android:id="@+id/header_panel">
 
         <RelativeLayout
