--- a/app/src/main/res/layout/win.xml
+++ b/app/src/main/res/layout/win.xml
@@ -6,8 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#a4000000"
-        ></RelativeLayout>
+        android:background="#a4000000"></RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
