--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -6,6 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@drawable/top_panel"
         android:layout_height="40dp">
 
         <RelativeLayout
@@ -35,7 +36,7 @@
                 android:layout_centerVertical="true"
                 android:textSize="20sp"
                 android:layout_marginRight="5dp"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
@@ -82,7 +83,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
@@ -114,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="23sp"
-        android:textColor="#FFFFFF"
+        android:textColor="#ffffff"
         android:autoLink="email"
         android:textColorLink="#ff0010b6"
         android:text="      Команда разработчиков DailyAppsLab благодарит вас за установку игры. С любыми пожеланиями или предложениями вы можете обратиться к нам по электронному адресу dailyappslab@gmail.com \n     Если вам понравилась игра - пожалуйста, поддержите нас отзывами о оценкам! \n    Желаем удачи и приятного времяпровождения!"
