--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -7,6 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@drawable/top_panel"
         android:layout_height="40dp"
         >
 
@@ -37,7 +38,7 @@
                 android:layout_centerVertical="true"
                 android:textSize="20sp"
                 android:layout_marginRight="5dp"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
@@ -86,7 +87,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
@@ -147,18 +148,18 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter1"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
@@ -168,9 +169,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter2"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
@@ -180,9 +181,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter3"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
@@ -192,9 +193,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter4"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
@@ -205,9 +206,9 @@
             android:layout_height="60dp"
             android:id="@+id/buttonLetter5"
             android:layout_marginLeft="10dp"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -231,9 +232,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter6"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="70dp"
@@ -243,9 +244,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter7"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -255,9 +256,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter8"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -267,9 +268,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter9"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -279,9 +280,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter10"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -291,9 +292,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter11"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -303,9 +304,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter12"
-            android:background="#e16fcfc0"
             android:textSize="35sp"
-            android:textColor="#ffffffff"
+            android:textColor="@string/text_c"
+            android:background="@string/kvadrat"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
