--- a/app/src/main/res/layout-large/main.xml
+++ b/app/src/main/res/layout-large/main.xml
@@ -7,6 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@drawable/top_panel"
         android:layout_height="40dp">
 
         <RelativeLayout
@@ -36,7 +37,7 @@
                 android:layout_centerVertical="true"
                 android:textSize="20sp"
                 android:layout_marginRight="5dp"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
@@ -65,7 +66,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:textColor="#ffffffff"
+                android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
