--- a/app/src/main/res/layout-small/main.xml
+++ b/app/src/main/res/layout-small/main.xml
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:background="@drawable/top_panel"
         android:id="@+id/header_panel"
         android:alpha="1.0">
 
